--- a/.github/workflows/.security.yml
+++ b/.github/workflows/.security.yml
@@ -12,6 +12,6 @@ jobs:
     with:
       node_version: '20'
       enable_fuzzing: true
-    secrets:
-      SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+    # secrets:
+    #   SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+    #   SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
