--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   security:
-    uses: helgif/DevSecOps_Pipelines/.github/workflows/security-pipeline-template.yml@master
+    uses: helgif/DevSecOps_Pipelines/.github/workflows/security-pipeline-template.yml@main
     with:
       node_version: '20'
       enable_fuzzing: true
